Fix info text contrast accessibility

--- a/ui/src/assets/styles/partial/_dashboard.scss
+++ b/ui/src/assets/styles/partial/_dashboard.scss
@@ -1786,14 +1786,14 @@
     }
 
     input:disabled {
-      color: gray;
+      color: #727272;
       cursor: not-allowed;
     }
   }
 
   .claim-choice-skip-answer {
     input:disabled {
-      color: gray;
+      color: #727272;
       cursor: not-allowed;
     }
   }
